--- a/src/Kunstmaan/NodeBundle/Resources/config/services.yml
+++ b/src/Kunstmaan/NodeBundle/Resources/config/services.yml
@@ -267,7 +267,7 @@ services:
         tags: [ 'controller.service_arguments', 'container.service_subscriber' ]
 
     Kunstmaan\NodeBundle\Controller\WidgetsController:
-        arguments: [ '@kunstmaan_admin.domain_configuration', '@doctrine.orm.entity_manager' ]
+        arguments: [ '@kunstmaan_admin.domain_configuration', '@doctrine.orm.entity_manager', '@kunstmaan_admin.acl.helper' ]
         calls:
             - setContainer: [ ] # Container service locator will be injected filled by the services from subscribed services
         tags: [ 'controller.service_arguments', 'container.service_subscriber' ]
