--- a/src/Kunstmaan/AdminBundle/Resources/config/services.yml
+++ b/src/Kunstmaan/AdminBundle/Resources/config/services.yml
@@ -223,6 +223,8 @@ services:
 
     kunstmaan_admin.sidebar.twig.extension:
         class: Kunstmaan\AdminBundle\Twig\SidebarTwigExtension
+        arguments:
+            - '%kunstmaan_admin.hide_sidebar%'
         tags:
             - { name: twig.extension }
 
