--- a/src/Kunstmaan/RedirectBundle/Resources/config/services.yml
+++ b/src/Kunstmaan/RedirectBundle/Resources/config/services.yml
@@ -22,8 +22,14 @@ services:
             - { name: form.type, alias: kunstmaan_redirect_form_type }
 
     Kunstmaan\RedirectBundle\Controller\RedirectAdminListController:
-        arguments: ['@kunstmaan_admin.domain_configuration']
+        arguments: ['@Kunstmaan\RedirectBundle\AdminList\RedirectAdminListConfigurator']
         calls:
             - setContainer: [ ] # Container service locator will be injected filled by the services from subscribed services
         tags: ['controller.service_arguments', 'container.service_subscriber']
 
+    Kunstmaan\RedirectBundle\AdminList\RedirectAdminListConfigurator:
+        arguments:
+            $em: '@doctrine.orm.entity_manager'
+            $domainConfiguration: '@kunstmaan_admin.domain_configuration'
+        autowire: true
+        autoconfigure: true
