--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -22,10 +22,10 @@ jobs:
                     sed -i -e 's/{% endif %}//g' src/Kunstmaan/GeneratorBundle/Resources/SensioGeneratorBundle/skeleton/layout/groundcontrol/package.json
                     sed -i -e 's/"name".*/"name":"demo",/g' src/Kunstmaan/GeneratorBundle/Resources/SensioGeneratorBundle/skeleton/layout/groundcontrol/package.json
 
-            -   name: Install dependencies
-                run: yarn
-
-            -   run: |
-                    npm run build -- --continueAfterTestError=true
-# Temporary disable buildGroundControlSkeleton step as npm install takes a very long time.
-#                    npm run buildGroundControlSkeleton
+#            -   name: Install dependencies
+#                run: yarn
+#
+#            -   run: |
+#                    npm run build -- --continueAfterTestError=true
+## Temporary disable buildGroundControlSkeleton step as npm install takes a very long time.
+##                    npm run buildGroundControlSkeleton
